--- a/02.vars.yml
+++ b/02.vars.yml
@@ -2,7 +2,7 @@
   hosts: all
   connection: local
   vars:
-    url: play.example.com
+    URL: play.example.com
   tasks:
     - name: access a variable
       ansible.builtin.debug:
