--- a/02.vars.yml
+++ b/02.vars.yml
@@ -7,3 +7,13 @@
     - name: access a variable
       ansible.builtin.debug:
         msg: URL == {{URL}}
+
+- name: declare variable at task level
+  hosts: all
+  connection: local
+  tasks:
+    - name: declare and access a variable
+      ansible.builtin.debug:
+        msg: URL == {{URL}}
+      vars:
+        URL: play.example.com
