--- a/02.vars.yml
+++ b/02.vars.yml
@@ -43,3 +43,16 @@
     - name: access facts
       ansible.builtin.debug:
         msg: ansible host name == {{ansible_fqdn}}
+
+
+- name: register a variable
+  hosts: all
+  connection: local
+  tasks:
+    - name: run shall a command
+      ansible.builtin.shell: uptime
+      register: out
+
+    - name: print out
+      ansible.builtin.debug:
+        msg: "{{out}}"
