--- a/04.loop.yml
+++ b/04.loop.yml
@@ -4,7 +4,13 @@
   tasks:
     - name: print fruit name
       debug:
-        msg: fruit name is {{item}}
+        msg: fruit name is {{ item }}
       loop:
         - apple
         - banan
+    - name: print fruit name & quantity
+      degug:
+        msg: fruit name {{ item.name }}, & quantity is {{ item.quantity }}
+        loop:
+          - { name: "apple", quantity: 100 }
+          - { name: "banan", quantity: 200 }
