--- a/05-parameter.yml
+++ b/05-parameter.yml
@@ -4,3 +4,14 @@
   tasks:
     - debug:
         msg: "{{ lookup('aws_ssm', 'test', region='us-east-1' ) }}"
+
+
+- name: Create or update key/value pair in AWS SSM parameter store
+  community.aws.ssm_parameter:
+    name: "Hello"
+    description: "This is your first key"
+    value: "World"
+
+
+
+
