--- a/0.5-parametet.yml
+++ b/0.5-parametet.yml
@@ -3,4 +3,4 @@
   connection: local
   tasks:
     - debug:
-        msg: "{{ lookup('aws_ssm', 'test', region='us-east-1' ) }}"
+        msg: "{{ lookup('aws_ssm', 'job.xml', region='us-east-1' ) }}"
